fix: faq-page default spacing

--- a/css/style.css
+++ b/css/style.css
@@ -6706,7 +6706,7 @@ body.admin-bar .header-menu-area.sticky_menu {
 }
 @media only screen and (min-width: 992px) and (max-width: 1399px) {
   .faq-area .elementor-container {
-    padding-right: 28px;
+    padding: 0 28px;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
