--- a/sass/modules/_faq-area.scss
+++ b/sass/modules/_faq-area.scss
@@ -204,7 +204,7 @@
             padding: 0 12px;
         }
         @media only screen and (min-width: 992px) and (max-width: 1399px){
-            padding-right: 28px;
+            padding: 0 28px;
         }
     }
     .faq-counter-inner{
